fix use variables for spacing

--- a/assets/css/frontend/layout/site-content.css
+++ b/assets/css/frontend/layout/site-content.css
@@ -1,25 +1,25 @@
 .site-content {
 
 	& > * {
-		margin: 1em auto;
+		margin: var(--s-normal) auto;
 		max-width: var(--w-standard);
 
 		&:first-child {
-			margin-top: 5rem;
+			margin-top: var(--s-xxxlarge);
 		}
 
 		&:last-child {
-			margin-bottom: 5rem;
+			margin-bottom: var(--s-xxxlarge);
 		}
 	}
 
 	& > .alignwide {
-		margin: 2em auto;
+		margin: var(--s-large) auto;
 		max-width: var(--w-extended);
 	}
 
 	& > .alignfull {
-		margin: 3em auto;
+		margin: var(--s-xxlarge) auto;
 		max-width: var(--w-full);
 
 		&:first-child {
@@ -31,7 +31,7 @@
 		}
 
 		& + .alignfull {
-			margin-top: -3em;
+			margin-top: -var(--s-xxlarge);
 		}
 	}
 }
